--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Glossário IFAL</title>
+        <title>Glossário S.I.</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
         <script type="text/javascript" src="script.js"></script>
     </head>
