--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <h1>Glossário</h1>
                         </div>
                         <div class="fraseSecundaria">
-                            <h3>Bacharelado em Sistemas de Informações</h3> 
+                            <h3>Bacharelado em Sistemas de Informações teste</h3> 
                         </div>
                     </div>
                 </div>
